# i2cwire-example

./: .gitmodules  Cargo.toml  README.md
src/: io_reader.rs  lib.rs  main.rs  wire.rs
